src/main/java/com/example/fresher_manager/exception/error/EmailAlreadyExistsException.java
package com.example.fresher_manager.exception.error;

public class EmailAlreadyExistsException extends RuntimeException{
    public EmailAlreadyExistsException(String message) {
        super(message);
    }
}
